==> pal73/FT-RIV/SOFT/UKU/IP55/FT_Gpu_Hal.c <==
#include "FT_DataTypes.h"
#include "FT_Platform.h"
#include "riverdi.h"
#include "LPC17xx.H"
#include "main.h"

ft_bool_t    Ft_Gpu_Hal_Open( void )
{


	SPI_InitTypeDef  SPI_InitStructure;
	GPIO_InitTypeDef GPIO_InitStructure;


	RCC_AHBPeriphClockCmd(RCC_AHBPeriph_GPIOA, ENABLE);
	/* SPI Periph clock enable */
	RCC_APB2PeriphClockCmd(RCC_APB2Periph_SPI1, ENABLE);

	/* Configure SPI pins: SCK */
	   GPIO_InitStructure.GPIO_Pin = GPIO_Pin_5;
	   GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF;
	   GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
	   GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
	   GPIO_InitStructure.GPIO_PuPd  = GPIO_PuPd_UP;
	   GPIO_Init(GPIOA, &GPIO_InitStructure);

	   /* Configure SPI pins: MISO */
	   GPIO_InitStructure.GPIO_Pin = GPIO_Pin_6;
	   GPIO_Init(GPIOA, &GPIO_InitStructure);

	   /* Configure SPI pins: MOSI */
	   GPIO_InitStructure.GPIO_Pin = GPIO_Pin_7;
	   GPIO_Init(GPIOA, &GPIO_InitStructure);

	   /* Configure SPI_CS_PIN pin:  CS pin */
	   GPIO_InitStructure.GPIO_Pin = GPIO_Pin_4;
	   GPIO_InitStructure.GPIO_Mode = GPIO_Mode_OUT;
	   GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
	   GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_UP;
	   GPIO_InitStructure.GPIO_Speed = GPIO_Speed_10MHz;
	   GPIO_Init(GPIOA, &GPIO_InitStructure);


   /* Connect PXx to SPI_SCK */
	   GPIO_PinAFConfig(GPIOA, GPIO_PinSource5, GPIO_AF_0);

	   /* Connect PXx to SD_SPI_MISO */
	   GPIO_PinAFConfig(GPIOA, GPIO_PinSource6, GPIO_AF_0);

   /* Connect PXx to SD_SPI_MOSI */
	   GPIO_PinAFConfig(GPIOA, GPIO_PinSource7, GPIO_AF_0);

	   /* SPI configuration -------------------------------------------------------*/
	   SPI_I2S_DeInit(SPI1);

	   SPI_InitStructure.SPI_Direction = SPI_Direction_2Lines_FullDuplex;
	   SPI_InitStructure.SPI_Mode = SPI_Mode_Master;
	   SPI_InitStructure.SPI_DataSize = SPI_DataSize_8b;
	   SPI_InitStructure.SPI_CPOL = SPI_CPOL_Low;
	   SPI_InitStructure.SPI_CPHA = SPI_CPHA_1Edge;
	   SPI_InitStructure.SPI_NSS = SPI_NSS_Soft;
	   SPI_InitStructure.SPI_BaudRatePrescaler = SPI_BaudRatePrescaler_2;

	   SPI_InitStructure.SPI_FirstBit = SPI_FirstBit_MSB;
	   SPI_InitStructure.SPI_CRCPolynomial = 7;
	   SPI_Init(SPI1, &SPI_InitStructure);

	   SPI_RxFIFOThresholdConfig(SPI1, SPI_RxFIFOThreshold_QF);

	   SPI_Cmd(SPI1, ENABLE); /* SD_SPI enable */





	return TRUE;
}

ft_void_t  Ft_Gpu_Hal_Close(Ft_Gpu_Hal_Context_t *host)
{
	host->status = FT_GPU_HAL_CLOSED;
#ifdef MSVC_PLATFORM_SPI
	/* Close the channel*/
	SPI_CloseChannel(host->hal_handle);
#endif
#ifdef ARDUINO_PLATFORM_SPI
        SPI.end();
#endif
#ifdef STM32F4XX
SPI_Cmd(SPI2, DISABLE);

#endif
#ifdef STM32F031C6
SPI_Cmd(SPI1, DISABLE);

#endif
}

ft_void_t   Ft_Gpu_Hal_EndTransfer(Ft_Gpu_Hal_Context_t *host)
{
#ifdef MSVC_PLATFORM_SPI
	//just disbale the CS - send 0 bytes with CS disable
	SPI_ToggleCS((FT_HANDLE)host->hal_handle,FALSE);
#endif
#ifdef ARDUINO_PLATFORM_SPI
	digitalWrite(FT_ARDUINO_PRO_SPI_CS, HIGH);
#endif
#if defined (STM32F4XX) || defined (STM32F031C6)
	GPIO_WriteBit(CS_PORT, CS_PIN, 1);
#endif

	RIV_CS_OFF
	host->status = FT_GPU_HAL_OPENED;
}

ft_void_t Ft_Gpu_HostCommand(ft_uint8_t cmd)
{


  GPIO_WriteBit(CS_PORT, CS_PIN, 0);
  SPI_SendByte(cmd);
  SPI_SendByte(0x00);
  SPI_SendByte(0x00);
  GPIO_WriteBit(CS_PORT, CS_PIN, 1);



}

ft_void_t Ft_Gpu_Hal_Powercycle(ft_bool_t up)
{
	if (up)
	{

            GPIO_WriteBit(PD_PORT, PD_PIN, 0);
            Ft_Gpu_Hal_Sleep(20);
            //while(1);
            GPIO_WriteBit(PD_PORT, PD_PIN, 1);
            Ft_Gpu_Hal_Sleep(20);

	}else
	{

            GPIO_WriteBit(PD_PORT, PD_PIN, 1);
            Ft_Gpu_Hal_Sleep(20);
            GPIO_WriteBit(PD_PORT, PD_PIN, 0);
            Ft_Gpu_Hal_Sleep(20);

	}
}

ft_void_t Ft_Gpu_Hal_WrMem(Ft_Gpu_Hal_Context_t *host,ft_uint32_t addr,const ft_uint8_t *buffer, ft_uint32_t length)
{
	ft_uint32_t SizeTransfered = 0;      

	Ft_Gpu_Hal_StartTransfer(host,FT_GPU_WRITE,addr);

#if defined(ARDUINO_PLATFORM) || defined (STM32F4XX) || defined (STM32F031C6)
	while (length--) {
            Ft_Gpu_Hal_Transfer8(host,*buffer);
	    buffer++;
	}
#endif

#ifdef MSVC_PLATFORM_SPI
	{
	    SPI_Write((FT_HANDLE)host->hal_handle,buffer,length,&SizeTransfered,SPI_TRANSFER_OPTIONS_SIZE_IN_BYTES);
	}
#endif


	Ft_Gpu_Hal_EndTransfer(host);
}

ft_void_t Ft_Gpu_Hal_RdMem(Ft_Gpu_Hal_Context_t *host,ft_uint32_t addr, ft_uint8_t *buffer, ft_uint32_t length)
{
	ft_uint32_t SizeTransfered = 0;      

	Ft_Gpu_Hal_StartTransfer(host,FT_GPU_READ,addr);

#if defined(ARDUINO_PLATFORM) || defined (STM32F4XX) || defined (STM32F031C6)
	while (length--) {
	   *buffer = Ft_Gpu_Hal_Transfer8(host,0);
	   buffer++;
	}
#endif

#ifdef MSVC_PLATFORM_SPI
	{
	   SPI_Read((FT_HANDLE)host->hal_handle,buffer,length,&SizeTransfered,SPI_TRANSFER_OPTIONS_SIZE_IN_BYTES);
	}
#endif

	Ft_Gpu_Hal_EndTransfer(host);
}

ft_void_t Ft_Gpu_Hal_Sleep(ft_uint16_t ms)
{
#ifdef MSVC_PLATFORM
	Sleep(ms);
#endif
#if defined(ARDUINO_PLATFORM) || defined(STM32F4XX) || defined(STM32F031C6)
	delay(ms);
#endif
}
